# demo-rollup

./: Cargo.toml  README.md  rollup_config.toml
.github/workflows/: rust.yml
src/: batch.rs  config.rs  context.rs  data_generation.rs  helpers.rs  main.rs  rpc.rs  runtime.rs  stf.rs  tx_hooks_impl.rs  tx_verifier.rs  tx_verifier_impl.rs
